<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_8"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill">

            <android.support.design.widget.TabItem
                android:id="@+id/infoTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info" />

            <android.support.design.widget.TabItem
                android:id="@+id/eventsTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events" />

            <android.support.design.widget.TabItem
                android:id="@+id/placesTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/places" />

            <android.support.design.widget.TabItem
                android:id="@+id/foodTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food" />


        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>