<?xml version="1.0" encoding="utf-8"?>

<!--Custom Item Style for the ListView-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlacesFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/locationImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/location_image"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingStart="@dimen/dp_8"
                android:paddingTop="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_8"
                android:textAppearance="?android:textAppearanceLarge"
                android:textStyle="bold"
                tools:text="@string/location_title" />

            <TextView
                android:id="@+id/detailsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingStart="@dimen/dp_8"
                android:paddingTop="@dimen/dp_8"
                android:paddingEnd="@dimen/dp_8"
                android:paddingBottom="@dimen/dp_16"
                tools:text="@string/location_details" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>